--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="All rights reserved"
 issueTrackerURL="http://my.issue.tracker/" #optional
 
 [[mods]]
-modId="dulocmod" #mandatory
+modId="dulocmod"
 
 version="1.16.4-1.0.0"
 
